- refactoring based on CQRS and Clean Architecture
